# OpenTimelineIO-Java-Bindings

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md  aarch32java.sh  aarch32javac.sh  aarch64java.sh  aarch64javac.sh  build.gradle  linux-aarch32-toolchain.cmake  linux-aarch64-toolchain.cmake  linux-amd64-toolchain.cmake  linux-x86-toolchain.cmake
.github/: dependabot.yml
.github/workflows/: android.yml  bintray_publish.yml  gradle.yml  publish.yml
src/main/cpp/: CMakeLists.txt  class_codes.cpp  exceptions.cpp  io_opentimeline_OTIOFinalizer.cpp  io_opentimeline_OTIONative.cpp  io_opentimeline_opentime_ErrorStatus.cpp  io_opentimeline_opentime_RationalTime.cpp  io_opentimeline_opentime_TimeRange.cpp  io_opentimeline_opentime_TimeTransform.cpp  io_opentimeline_opentimelineio_Algorithms.cpp  io_opentimeline_opentimelineio_Any.cpp  io_opentimeline_opentimelineio_AnyDictionary.cpp  io_opentimeline_opentimelineio_AnyDictionary_Iterator.cpp  io_opentimeline_opentimelineio_AnyVector.cpp  io_opentimeline_opentimelineio_AnyVector_Iterator.cpp  io_opentimeline_opentimelineio_Clip.cpp  io_opentimeline_opentimelineio_Composable.cpp  io_opentimeline_opentimelineio_Composition.cpp  io_opentimeline_opentimelineio_Deserialization.cpp  io_opentimeline_opentimelineio_Effect.cpp  io_opentimeline_opentimelineio_ErrorStatus.cpp  io_opentimeline_opentimelineio_ExternalReference.cpp  io_opentimeline_opentimelineio_FreezeFrame.cpp  io_opentimeline_opentimelineio_Gap.cpp  io_opentimeline_opentimelineio_GeneratorReference.cpp  io_opentimeline_opentimelineio_ImageSequenceReference.cpp  io_opentimeline_opentimelineio_Item.cpp  io_opentimeline_opentimelineio_LinearTimeWarp.cpp  io_opentimeline_opentimelineio_Marker.cpp  io_opentimeline_opentimelineio_MediaReference.cpp  (+13 more)
(+124 files in other folders)
